feat: lcel phrase generator

--- a/src/main.ipynb
+++ b/src/main.ipynb
@@ -2,13 +2,27 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import requests\n",
     "import pandas as pd\n",
-    "from bs4 import BeautifulSoup"
+    "from bs4 import BeautifulSoup\n",
+    "\n",
+    "import dotenv\n",
+    "dotenv.load_dotenv()"
    ]
   },
   {
@@ -554,7 +568,7 @@
     "    name = cols[1].text.strip() \n",
     "    data.append({'ticker': symbol, 'name': name})\n",
     "\n",
-    "data, len(data)"
+    "data[:10], len(data)"
    ]
   },
   {
@@ -640,19 +654,173 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ticker</th>\n",
+       "      <th>name</th>\n",
+       "      <th>description</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>MMM</td>\n",
+       "      <td>3M</td>\n",
+       "      <td>The 3M Company is an American multinational co...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>AOS</td>\n",
+       "      <td>A. O. Smith</td>\n",
+       "      <td>A. O. Smith Corporation is an American manufac...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>ABT</td>\n",
+       "      <td>Abbott</td>\n",
+       "      <td>Abbott Laboratories is an American multination...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>ABBV</td>\n",
+       "      <td>AbbVie</td>\n",
+       "      <td>AbbVie is an American publicly traded biopharm...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>ACN</td>\n",
+       "      <td>Accenture</td>\n",
+       "      <td>Accenture plc is an Irish-domiciled multinatio...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  ticker         name                                        description\n",
+       "0    MMM           3M  The 3M Company is an American multinational co...\n",
+       "1    AOS  A. O. Smith  A. O. Smith Corporation is an American manufac...\n",
+       "2    ABT       Abbott  Abbott Laboratories is an American multination...\n",
+       "3   ABBV       AbbVie  AbbVie is an American publicly traded biopharm...\n",
+       "4    ACN    Accenture  Accenture plc is an Irish-domiciled multinatio..."
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "    "
+    "import os\n",
+    "\n",
+    "# extract descriptions of each ticker from alphavantage\n",
+    "api_key = os.getenv(\"ALPHAVANTAGE_API_KEY\")\n",
+    "\n",
+    "\n",
+    "for ticker in df[\"ticker\"]:\n",
+    "    url = f\"https://www.alphavantage.co/query?function=OVERVIEW&symbol={ticker}&apikey={api_key}\"\n",
+    "    r = requests.get(url)\n",
+    "    data = r.json()\n",
+    "    # append to dataframe\n",
+    "    df.loc[df[\"ticker\"] == ticker, \"description\"] = data.get(\"Description\")\n",
+    "\n",
+    "\n",
+    "df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "([\"Minnesota's industrial giant\",\n",
+       "  'The Post-it Notes creator',\n",
+       "  'Safety and healthcare innovator',\n",
+       "  'Global conglomerate from Saint Paul',\n",
+       "  'Diverse product powerhouse',\n",
+       "  'Industry leader in adhesives',\n",
+       "  'The company behind Scotch Tape',\n",
+       "  'Personal protective gear supplier',\n",
+       "  '60,000 products under one roof',\n",
+       "  'From laminates to dental products'],\n",
+       " 50,\n",
+       " list)"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from langchain_core.output_parsers import JsonOutputParser\n",
+    "from langchain_core.prompts import ChatPromptTemplate\n",
+    "from langchain_openai import ChatOpenAI\n",
+    "\n",
+    "import dotenv\n",
+    "dotenv.load_dotenv()\n",
+    "\n",
+    "import os\n",
+    "import json\n",
+    "\n",
+    "prompt = ChatPromptTemplate.from_template(\n",
+    "    \"\"\"You are now Phrase Generator, your job is to take in a company name, \n",
+    "    description, and ticker and generate natural language phrases \n",
+    "    that would be useful for people looking for that company\n",
+    "\n",
+    "    the company name is: {name}\n",
+    "    the company description is: {description}\n",
+    "    the company ticker is: {ticker}\n",
+    "\n",
+    "    \n",
+    "    For example if the company name is Apple, the description is iPhone maker, and the ticker is AAPL,\n",
+    "    you might generate phrases like \"Big tech company\" or \"steve jobs company\" etc\n",
+    "    \n",
+    "    To generate phrases for the company use your training data and the supplied description.\n",
+    "\n",
+    "    Generate 50 casual natural language phrases and output them as json. Only respond in json format.\n",
+    "\n",
+    "    \"\"\"\n",
+    "\n",
+    ")\n",
+    "\n",
+    "model = ChatOpenAI(\n",
+    "    model = \"gpt-4-turbo-preview\",\n",
+    "    api_key = os.getenv(\"OPENAI_API_KEY\")\n",
+    ")\n",
+    "\n",
+    "output_parser = JsonOutputParser()\n",
+    "\n",
+    "chain = prompt | model | output_parser\n",
+    "\n",
+    "phrases = chain.invoke({\"name\": df[\"name\"][0], \"description\": df[\"description\"][0], \"ticker\": df[\"ticker\"][0]})\n",
+    "phrases[:10], len(phrases), type(phrases)\n"
+   ]
   }
  ],
  "metadata": {
