docs: md in main

--- a/src/main.ipynb
+++ b/src/main.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# phrase-ticker Dataset Creation\n",
+    "\n",
+    "This notebook demonstrates how to create a dataset linking S&P 500 company tickers with natural language phrases, using web scraping for data collection and GPT-4 for phrase generation. Designed for easy integration with the Hugging Face `datasets` library, this tool aims to enhance the extraction of stock tickers from textual data, offering valuable resources for financial NLP tasks."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 60,
    "metadata": {},
@@ -17,12 +26,24 @@
     }
    ],
    "source": [
+    "# import libraries\n",
+    "\n",
     "import requests\n",
     "import pandas as pd\n",
     "from bs4 import BeautifulSoup\n",
     "\n",
+    "# import environment variables\n",
     "import dotenv\n",
     "dotenv.load_dotenv()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Extracting S&P 500 Company Information\n",
+    "\n",
+    "In this section, we retrieve a list of S&P 500 companies and their stock ticker symbols directly from Wikipedia. Using Python's `requests` library, we access the webpage containing the S&P 500 index composition. With `BeautifulSoup`, we parse the HTML content to locate and extract the data from the relevant table. Each row of the table provides the ticker symbol and company name, which we collect into a structured list for further processing. \n"
    ]
   },
   {
@@ -160,6 +181,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Phrase Generation with GPT-4\n",
+    "\n",
+    "This section uses the GPT-4 model to generate 50 unique phrases for each S&P 500 company, enhancing our dataset for ticker extraction tasks. The process, facilitated by LangChain and OpenAI APIs, dynamically creates phrases reflecting each company's attributes, making the data more versatile for NLP applications."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 96,
    "metadata": {},
@@ -274,6 +304,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "## Concurrent Phrase Generation\n",
+    "\n",
+    "This section accelerates phrase generation by using `concurrent.futures` for parallel processing. It simultaneously invokes the GPT-4 model for each S&P 500 company, updating our dataset with generated phrases. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -318,6 +358,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Filling Missing Phrases\n",
+    "\n",
+    "This step identifies and fills missing phrases for using the GPT-4 model, ensuring our dataset is complete before saving it to a new CSV."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 32,
    "metadata": {},
@@ -341,6 +390,15 @@
     "\n",
     "# df to new csv\n",
     "df.to_csv('../data/raw.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Pivoting Dataset for phrase-ticker Mapping\n",
+    "\n",
+    "This section transforms the original dataset into a new format where each row represents a unique combination of a phrase and its corresponding ticker symbol. By iterating over each company's phrases, we create a more granular dataset suitable for NLP tasks focused on ticker extraction. The final structured dataset is saved to CSV, facilitating easy access and further use."
    ]
   },
   {
@@ -374,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -399,13 +457,6 @@
     "\n",
     "# discrepancy in num rows could be because gpt occasionally did 51 phrases instead of 50"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
