feat: hugginface uplaod

--- a/src/main.ipynb
+++ b/src/main.ipynb
@@ -457,6 +457,43 @@
     "\n",
     "# discrepancy in num rows could be because gpt occasionally did 51 phrases instead of 50"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DatasetDict({\n",
+       "    train: Dataset({\n",
+       "        features: ['phrase', 'ticker'],\n",
+       "        num_rows: 25181\n",
+       "    })\n",
+       "})"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# to download the dataset from huggingface to local\n",
+    "from datasets import load_dataset\n",
+    "\n",
+    "dataset = load_dataset(\"rohanmahen/phrase-ticker\")\n",
+    "\n",
+    "dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
